[tool.poetry]
name = "crypto-sheets"
version = "0.1.0"
description = ""
authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "~1.56"
google-api-python-client = "~2.22"
google-auth-httplib2 = "~0.1"
google-auth-oauthlib = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
crypto_sheets = "crypto_sheets.main:main"

[tool.isort]
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_after_imports = 2
profile = black
remove_redundant_aliases = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
